tests/ui/incomparable_eq.stderr
Error [E0305]: pattern `b` doesn't match this value's type
  --> tests/ui/incomparable_eq.lex:6:12
    |
  6 |     return a == b;
    |            ^^^^^^
 Why: `Bag` is a struct, not an enum
 Fix: use a struct field access instead of a variant pattern
