tests/ui/incomparable_eq.jet
struct Bag {
    data: List[Int];
}

fn same(a: Bag, b: Bag) -> Bool {
    return a == b;
}

fn main() {}
